# ptsc_eigen

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  PtscEigen_8cpp__incl.md5  PtscEigen_8hpp.html  QpProblem_8hpp__dep__incl.map  README.md  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  graph_legend.html  structDenseQpProblem.html  structPtscEigen_1_1Task.html  test_installation.sh
.ci/: ci_before_install.sh  ci_build.sh  ci_run_tests.sh
.github/workflows/: build_status.yml  ci.yml  ubuntu18.yml  ubuntu20.yml
cmake/: PtscEigenConfig.cmake
docs/: ChronoCall_8hpp_source.html  OsqpEigenOptimization_8cpp__incl.map  OsqpEigenOptimization_8hpp_source.html  PtscEigen_8cpp.html  PtscEigen_8hpp__dep__incl.md5  PtscEigen_8hpp__incl.map  PtscEigen_8hpp__incl.md5  PtscEigen_8hpp_source.html  QpProblem_8hpp.html  QpProblem_8hpp__dep__incl.md5  QpProblem_8hpp__incl.md5  QpProblem_8hpp_source.html  annotated.html  classOsqpEigenOpt-members.html  classPtscEigen_1_1PTSC-members.html  classPtscEigen_1_1PTSC.html  classPtscEigen_1_1SVD.html  functions.html  functions_func.html  index.html  structOsqpSettings-members.html  structOsqpSettings.html  structPtscEigen_1_1Task-members.html  structSparseQpProblem-members.html  structSparseQpProblem.html
docs/search/: all_4.js  all_7.js  classes_1.js  classes_2.js  classes_3.js  files_1.js  functions_0.js  functions_4.js  searchdata.js
html/: OsqpEigenOptimization_8cpp.html  OsqpEigenOptimization_8cpp__incl.md5  PtscEigen_8cpp__incl.map  PtscEigen_8hpp__dep__incl.map  QpProblem_8hpp__incl.map  classOsqpEigenOpt.html  classPtscEigen_1_1SVD-members.html  dir_000001_000000.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  structDenseQpProblem-members.html
html/search/: all_6.js  functions_1.js  functions_3.js  functions_5.js  pages_0.js
include/: ChronoCall.hpp  OsqpEigenOptimization.hpp  PtscEigen.hpp  QpProblem.hpp
search/: all_1.js  all_3.js  classes_4.js  files_0.js  files_2.js  functions_2.js
src/: OsqpEigenOptimization.cpp  PtscEigen.cpp
tests/: test_example_bound_constrained.cpp  test_example_fully_constrained.cpp  test_example_unconstrained.cpp
